# clinical-compression

./: .gitignore  LICENSE  README.md  anchors_and_questions.md  case1_part1.json  case1_part2.json  case1_part3.json  check_contamination.py  endocarditis.json  endocarditis_part1.json  endocarditis_part2.json  endocarditis_part3.json  fact-taxonomy.md  filler_generator.md  generate.md  judge.md  merge_case_outputs.py  orchestrate.py  pressure_test_readme.md  pyproject.toml  text_extractor.md  triple_therapy.json
pubmed/: bleeding-facts-final.json  bleeding-facts.json  bleeding-reconstruction.txt  bleeding-triple-therapy-case.json  bleeding-triple-therapy-case.txt  endocarditis-facts-final.json  endocarditis-facts.json  endocarditis-reconstruction.txt  endocarditis.txt  retropharyngeal-hematoma-case.json  retropharyngeal-hematoma-case.txt  retropharyngeal-hematoma-facts-final.json  retropharyngeal-hematoma-facts.json  retropharyngeal-hematoma-reconstruction.txt  vanc-resistant-endocarditis-case.txt  vanc-resistant-endocarditis-facts-final.json  vanc-resistant-endocarditis-facts.json  vanc-resistant-endocarditis-reconstruction.txt
results/: bleeding-frontier-3x-metadata.txt  bleeding-frontier-3x.txt  bleeding-perplexity-4tier.csv  bleeding-perplexity.csv  bleeding-qwen3-3x.txt  bleeding-qwen3-3x_metadata.txt  compression-scoring-analysis.md  retropharyngeal-perplexity-4tier.csv  retropharyngeal-perplexity.csv
scratch/: prompt.txt  prompt2.txt  raw_response.json  raw_response2.json  verify1.txt  verify2.txt  verify_prompt.txt  verify_response.json  verify_response1.json  (+1 more)
(+27 files in other folders)
