[project]
name = "clinical-compression"
version = "0.1.0"
description = "Structured clinical fact extraction schema for evaluating context compression on clinical text."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
# Forward-pass perplexity profiling (src/analysis/perplexity_profile.py).
# Heavy GPU stack, kept out of the core install: pip install -e .[analysis]
analysis = [
    "torch",
    "transformers",
    "bitsandbytes",
    "matplotlib",
    "accelerate",
    "wordfreq",
]

# Tests import the schema as `from schema.fact_schema import ...`; putting
# `src` on the path makes `schema` a top-level package without an install step.
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
